--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,10 +20,9 @@
                 <li>
                     <a href="./telas.html">Telas</a>
                     <ul class="menu-vertical">
-                        <li><a href="">Cuerina</a></li> 
-                        <li><a href="">Cordura nacional</a></li>
-                        <li><a href="">Cordura estampada</a></li>
-                        <li><a href="">Camuflado</a></li>
+                        <li><a href="./rojo.html">Cuerina roja</a></li> 
+                        <li><a href="./azul.html">Cordura azul</a></li>
+                        <li><a href="./naranja.html">Cordura naranja</a></li>
                     </ul>
                 </li>
                 <div class="imagenNav">
@@ -61,10 +60,10 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="./pages/telas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Telas</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Action</a></li>
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="./rojo.html">Rojo</a></li>
+                                    <li><a class="dropdown-item" href="./azul.html">Azul</a></li>
+                                    <li><a class="dropdown-item" href="./naranja.html">naranaja</a></li>
+                                    <li><a class="dropdown-item" href="./telas.html">verde</a></li>
                                 </ul>
                             </li>
                         </ul>
