--- a/pages/muestrario.html
+++ b/pages/muestrario.html
@@ -20,10 +20,9 @@
                 <li>
                     <a href="./telas.html">Telas</a>
                     <ul class="menu-vertical">
-                        <li><a href="">Cuerina</a></li> 
-                        <li><a href="">Cordura nacional</a></li>
-                        <li><a href="">Cordura estampada</a></li>
-                        <li><a href="">Camuflado</a></li>
+                        <li><a href="./rojo.html">Cuerina roja</a></li> 
+                        <li><a href="./azul.html">Cordura azul</a></li>
+                        <li><a href="./naranja.html">Cordura naranja</a></li>
                     </ul>
                 </li>
                 <div class="imagenNav">
@@ -61,10 +60,10 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="./pages/telas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Telas</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Action</a></li>
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="./rojo.html">Rojo</a></li>
+                                    <li><a class="dropdown-item" href="./azul.html">Azul</a></li>
+                                    <li><a class="dropdown-item" href="./naranja.html">naranaja</a></li>
+                                    <li><a class="dropdown-item" href="./telas.html">verde</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -78,7 +77,7 @@
         <section class="mainMuestrario">
             <h1 class="tituloMuestrario">Muestrario</h1>
             <div id="galeria">
-                <img src="../assets/img/galeria 1.jpg" alt="galeria 0" class="g-img-0">
+                <img src="../assets/img/galeria 0.jpg" alt="galeria 0" class="g-img-0">
                 <img src="../assets/img/galeria 1.jpg" alt="galeria 1" class="g-img-1">
                 <img src="../assets/img/galeria 2.jpg" alt="galeria 2" class="g-img-2">
                 <img src="../assets/img/galeria 3.jpg" alt="galeria 3" class="g-img-3">
@@ -88,6 +87,8 @@
                 <img src="../assets/img/galeria 7.jpg" alt="galeria 7" class="g-img-7">
                 <img src="../assets/img/galeria 8.jpg" alt="galeria 8" class="g-img-8">
                 <img src="../assets/img/galeria 9.jpg" alt="galeria 9" class="g-img-9">
+                <img src="../assets/img/galeria 9-m.jpg" alt="galeria 9" class="g-img-9-m">
+                <img src="../assets/img/galeria 9-t.jpg" alt="galeria 9" class="g-img-9-t">
             </div>
         </section>
     </main>
