--- a/pages/telas.html
+++ b/pages/telas.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Telas</title>
+    <title>Telas-cuerina-verde</title>
     <meta name="description" content="Diseño y fabricacion textil.">
     <meta name="keywords" content="mochilas, carteras, marroquineria, telas">
 </head>
@@ -20,10 +20,9 @@
                 <li>
                     <a href="./telas.html">Telas</a>
                     <ul class="menu-vertical">
-                        <li><a href="">Cuerina</a></li> 
-                        <li><a href="">Cordura nacional</a></li>
-                        <li><a href="">Cordura estampada</a></li>
-                        <li><a href="">Camuflado</a></li>
+                        <li><a href="./rojo.html">Cuerina roja</a></li> 
+                        <li><a href="./azul.html">Cordura azul</a></li>
+                        <li><a href="./naranja.html">Cordura naranja</a></li>
                     </ul>
                 </li>
                 <div class="imagenNav">
@@ -59,12 +58,12 @@
                                 <a class="nav-link" href="./sobremi.html">sobre mi</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="./pages/telas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Telas</a>
+                                <a class="nav-link dropdown-toggle" href="./pages/telas.html" role="button" data-bs-toggle="dropdown" > Telas</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Action</a></li>
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Another action</a></li>
-                                    <li><a class="dropdown-item" href="./pages/telas.html">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="./rojo.html">Rojo</a></li>
+                                    <li><a class="dropdown-item" href="./azul.html">Azul</a></li>
+                                    <li><a class="dropdown-item" href="./naranja.html">naranaja</a></li>
+                                    <li><a class="dropdown-item" href="./telas.html">verde</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -75,10 +74,10 @@
     </header>
 
     <main class="container">
-        <div id="infoTelas">
+        <section id="infoTelas">
             <div class="tela">
                 <h1 class="h1Telas">Cuerina</h1>
-                <img src="../assets/img/cuerina.jpg" class="imgTela" alt="...">
+                <img src="../assets/img/cuerina.jpg" class="imgTela" alt="verde">
             </div>
     
             <div class="info">
@@ -108,21 +107,35 @@
                             <circle cx="8" cy="8" r="8"/>
                         </svg>
                     </div>
-                    <div class="yellow">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                            <circle cx="8" cy="8" r="8"/>
-                        </svg>
-                    </div>
-                    <div class="purple">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                            <circle cx="8" cy="8" r="8"/>
-                        </svg>
-                    </div>
-                    <div class="white">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                            <circle cx="8" cy="8" r="8"/>
-                        </svg>
-                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="masTelas">
+            <div class="container">
+                <div class="imgMasTela">
+                    <img src="../assets/img/cuerina2.jpg" alt="rojo">
+                </div>
+                <div class="datoMasTela">
+                    <a href="./rojo.html"><h2>Cuerina roja</h2></a>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="imgMasTela">
+                    <img src="../assets/img/cuerina3.jpg" alt="naranja">
+                </div>
+                <div class="datoMasTela">
+                    <a href="./naranja.html"><h2>Cuerina naranja</h2></a>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="imgMasTela">
+                    <img src="../assets/img/cuerina4.jpg" alt="azul">
+                </div>
+                <div class="datoMasTela">
+                    <a href="./azul.html"><h2>Cuerina azul</h2></a>
                 </div>
             </div>
         </div>
