sacar img feria

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                             <img src="./assets/img/carru-1.png" alt="bienvenida a mi web">
                     </div>
 
-                    <div class="carousel-item">
+                    <!--<div class="carousel-item">
                         <a href="https://www.facebook.com/profile.php?id=100068758916134" target="_blank">
                             <img src="./assets/img/carru-2.png" alt="feria mundialito">
                         </a>
-                    </div>
+                    </div>-->
 
                     <div class="carousel-item">
                         <a href="./pages/muestrario.html" target="_blank">
@@ -127,11 +127,11 @@
                             <img src="./assets/img/movil-carru-1.png" alt="bienvenida a mi web">
                     </div>
 
-                    <div class="carousel-item">
+                    <!--<div class="carousel-item">
                         <a href="./pages/muestrario.html">
                             <img src="./assets/img/movil-carru-2.png" alt="feria mundialito">
                         </a>
-                    </div>
+                    </div>-->
 
                     <div class="carousel-item">
                         <a href="https://www.facebook.com/profile.php?id=100068758916134" target="_blank">
